# CBAT

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.antigravitycli/: 7e490a1f-4e00-4009-8eb9-c8026aca7a30.json
configs/: audit.yaml  benchmark_tasks_v1.yaml  benchmark_tasks_v2.yaml  dataset_luh_blank_v2.yaml  paths.example.yaml
data/: README.md
docs/: ASSUMPTION_REGISTER.md  BENCHMARK_ARTIFACTS.md  BENCHMARK_MANUSCRIPT_HANDOFF.md  BENCHMARK_RELEASE_CHECKLIST.md  BENCHMARK_REPRODUCIBILITY.md  BENCHMARK_RUNBOOK.md  BENCHMARK_V0_1_RC1_SUMMARY.md  BENCHMARK_V0_1_RC2_SUMMARY.md  CODEX_NEXT_WORK.md  COMMAND_DAG.md  DATASET_EVIDENCE_MEMO.md  DECISION_LOG.md  EIS_FEATURE_POLICY.md  FUTURE_BRANCHES.md  GITHUB_ISSUE_PLAN.md  GITHUB_RELEASE_DRAFT_v0.1-rc1.md  GITHUB_RELEASE_DRAFT_v0.1-rc2.md  GITHUB_RELEASE_DRAFT_v0.2-rc1.md  GITHUB_RELEASE_DRAFT_v0.2-rc1_DRAFT.md  KNOWN_DATA_ISSUES.md  LOG_AGE_MONOTONICITY_POLICY.md  MAIN_PROJECT_CLAIM_LEDGER_V2.md  MANUSCRIPT_PACKAGE_PLAN.md  PAPER_CLAIM_LEDGER.md  PAPER_FIGURE_PLAN.md  PAPER_SKELETON.md  POST_M9_REVIEW_CHECKLIST.md  POST_RC2_MAIN_STATUS.md  PROJECT_CHARTER.md  PUBLIC_REVIEW_ENTRYPOINT.md  PULSE_TARGET_POLICY.md  README.md  RELEASE_NOTES_v0.1-rc1.md  RELEASE_NOTES_v0.1-rc2.md  RELEASE_NOTES_v0.2-rc1.md  RELEASE_NOTES_v0.2-rc1_DRAFT.md  REPOSITORY_METADATA_CHECKLIST.md  REPO_STATUS.md  REPRODUCIBILITY_ISSUE_TEMPLATE.md  REPRODUCIBILITY_SMOKE_TEST_PLAN.md  (+4 more)
manuscript/: README.md  abstract_v0.md  cover_letter_draft_v0_8.md  data_code_availability_v0_8.md  discussion_negative_results_v0.md  figure_table_inventory_v0_8.md  introduction_v0.md  limitations_v0.md  manuscript_package_v0_7_manifest.md  manuscript_v0_2.md  manuscript_v0_3.md  manuscript_v0_4.md  manuscript_v0_4_traceability.md  manuscript_v0_5.md  manuscript_v0_5_traceability.md  manuscript_v0_6.md  manuscript_v0_6_traceability.md  manuscript_v0_7.md  manuscript_v0_7_traceability.md  methods_data_products_v0.md  methods_validation_v0.md  outline.md  results_capacity_baselines_v0.md  results_capacity_pulse_coupling_v0.md  results_pulse_resistance_v0.md  results_stress_features_v0.md  reviewer_response_prep.md  reviewer_response_prep_v2.md  source_traceability.md  submission_bundle_v0_8.md  submission_checklist_v0_8.md  submission_preflight_v0_7.md  submission_readiness_v0_9.md  supplement_v0_6.md  supplement_v0_7.md  title_abstract_options_v0_8.md  venue_targeting_matrix_v0_9.md
scripts/: audit_dataset.py  make_manifest.py
tests/: test_benchmark_tasks.py  test_c_rate_generalization.py  test_cli.py  (+33 more)
(+1536 files in other folders)
