[project]
name = "multimodal-battery-prediction"
version = "0.1.0"
description = "Reproducible grouped-validation battery degradation benchmark and manuscript handoff package."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pyarrow>=15.0.0",
    "py7zr>=0.21.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
baseline = [
    "pandas>=2.2",
    "scikit-learn>=1.4",
]
gbm = [
    "lightgbm>=4.0",
    "xgboost>=2.0",
]
neural = [
    "torch==2.12.0",
]

[project.scripts]
mbp = "mbp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mbp"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
